# Alfred-2.0

./: .breakpoints  .gitignore  README.md  main.py  pyproject.toml  results.csv
.github/ISSUE_TEMPLATE/: code-cleaning.md
DataExport/: bannerListMessage.txt  memberAndrew_H.txt  memberHelmie.txt  memberKobe.txt  memberLicks4bunnies.txt  memberM...txt  memberSweet D.txt  memberWinevego.txt  memberZaiki.txt  memberlittle-wizz.txt  membertinywizz.txt  memberĐ€|V|ï×Ģ)łÖŞŁ.txt  msgAddTarget.txt  msgErrorAvl.txt  msgErrorMessage.txt  msgHelpMessage.txt  msgLoyaltyRanking.txt  msgPubTargetList.txt  msgSkillRanking.txt  msgTargetList.txt
classes/: BannerDelete.py  Member.py  Season.py  Settings.py  SettingsView.py  Spec.py  SpecGet.py  SpecView.py  Structure.py  Target.py  TargetAdd.py  TargetComment.py  TargetDelete.py  TargetEdit.py  WondersView.py  availEval.py
data/: Developers_data.csv  Leadership_data.csv  RBC_data.csv  SX2_data.csv  SX8_data.csv  dict-popular-de.txt  dict-valid-de.txt  eden_buildings_ALL_3.csv  members.txt
functions/: assignSpec.py  assignSpecFunc.py  availFunc.py  bannerFunc.py  blueSpecFunc.py  drawSpec.py  drawSpecFunc.py  generalFunc.py  greenSpecFunc.py  memberFunc.py  redSpecFunc.py  seasonFunc.py  setupFunc.py  specInput.py  staticValues.py  targetFunctions.py  wondersFunc.py  wordleFunc.py
functions/specFunctions/: assignSpecFunc.py  blueSpecFunc.py  drawSpecFunc.py  greenSpecFunc.py  redSpecFunc.py
modules/Seasons/: cog.py
modules/availability/: cog.py
modules/banners/: cog.py
modules/classes/: Target.py  TargetSelect.py
(+15 files in other folders)
