[tool.poetry]
name = "repl_python3_Target-Planner"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
replit = "^3.2.4"
pandas = "^1.4.0"
jsons = "^1.6.1"
aiohttp = "^3.8.1"
nextcord = "^2.0.0-alpha.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
