[tool.poetry]
name = "repl_python3_beta_Alfred-dev"
version = "0.1.0"
description = ""
authors = ["jake5691 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.1"
pytz = "^2022.1"
replit = "^3.2.4"
aiohttp = "^3.8.1"
jsons = "^1.6.1"
nextcord = "^2.0.0-alpha.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
